--- a/TipTap/Info.plist
+++ b/TipTap/Info.plist
@@ -2,14 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
 	<key>KAKAO_APP_KEY</key>
 	<string>bb1cb9c803e5d360d647bfabbf1edeb7</string>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-        <string>kakaobb1cb9c803e5d360d647bfabbf1edeb7</string>
-        <string>kakaokompassauth</string>
-        <string>storykompassauth</string>
-    </array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaobb1cb9c803e5d360d647bfabbf1edeb7</string>
+		<string>kakaokompassauth</string>
+		<string>storykompassauth</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
