--- a/TipTap/Info.plist
+++ b/TipTap/Info.plist
@@ -2,35 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UIAppFonts</key>
-	<array>
-		<string>Montserrat-Light</string>
-		<string>Montserrat-Regular</string>
-		<string>KoPub Dotum_Pro Light</string>
-		<string>KoPub Dotum_Pro Medium</string>
-		<string>KoPub Dotum_Pro Bold</string>
-		<string>Montserrat-Medium</string>
-		<string>Montserrat-Bold</string>
-	</array>
-	<key>NSAppTransportSecurity</key>
-	<dict>
-		<key>NSAllowsArbitraryLoads</key>
-		<true/>
-	</dict>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string></string>
-	<key>KAKAO_APP_KEY</key>
-	<string>bb1cb9c803e5d360d647bfabbf1edeb7</string>
-	<key>LSApplicationQueriesSchemes</key>
-	<array>
-		<string>kakaobb1cb9c803e5d360d647bfabbf1edeb7</string>
-		<string>kakaokompassauth</string>
-		<string>storykompassauth</string>
-	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -44,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1.1</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -58,8 +29,37 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>KAKAO_APP_KEY</key>
+	<string>bb1cb9c803e5d360d647bfabbf1edeb7</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>kakaobb1cb9c803e5d360d647bfabbf1edeb7</string>
+		<string>kakaokompassauth</string>
+		<string>storykompassauth</string>
+	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string></string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string></string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>유저들과 사진을 공유 할 수 있습니다.</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Montserrat-Light</string>
+		<string>Montserrat-Regular</string>
+		<string>KoPub Dotum_Pro Light</string>
+		<string>KoPub Dotum_Pro Medium</string>
+		<string>KoPub Dotum_Pro Bold</string>
+		<string>Montserrat-Medium</string>
+		<string>Montserrat-Bold</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -81,5 +81,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
